correction of layout issue in project section.

--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ footer {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: space-between;
 }
 
 section .title {
@@ -319,11 +319,10 @@ section .title::after {
 
 .services .serv-content .card {
     width: calc(33% - 20px);
-    min-height: 450px;
     background: #222;
     text-align: center;
     border-radius: 6px;
-    padding: 20px 30px;
+    padding: 50px 25px;
     cursor: pointer;
     transition: all 0.3s ease;
 }
@@ -341,7 +340,7 @@ section .title::after {
 }
 
 .services .serv-content .card i {
-    font-size: 30px;
+    font-size: 50px;
     color: crimson;
     transition: color 0.3s ease;
 }
@@ -351,15 +350,10 @@ section .title::after {
 }
 
 .services .serv-content .card .text {
-    margin-top: 10px;
     font-size: 25px;
     font-weight: 500;
-    margin-bottom: 10px;
+    margin: 10px 0 7px 0;
 }
-
-
-   
-
 
 
 /* teams section styling */
@@ -368,14 +362,11 @@ section .title::after {
 }
 
 .teams .carousel .card {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 1.5rem;
-    min-height: 450px;
     background: #222;
     border-radius: 6px;
-    padding: 15px 20px;
+    padding: 25px 35px;
     text-align: center;
+    overflow: hidden;
     transition: all 0.3s ease;
 }
 
@@ -385,31 +376,45 @@ section .title::after {
 
 .teams .carousel .card .box {
     display: flex;
-    height: 450px;
-    padding: 50px 35px;
+    /* height: 450px; */
+    /* padding: 50px 35px; */
     flex-direction: column;
-    align-items: left;
-    overflow: hidden;
+    /* align-items: left; */
+    align-items: center;
+    justify-content: center;
+    /* overflow: hidden; */
     transition: all 0.3s ease;
     
-}
-
-.teams .carousel .card .box h1 {
-    margin-top: 15px 0;
-    font-size: 25px;
-    font-weight: 500;
-   
 }
 
 .teams .carousel .card:hover .box {
     transform: scale(1.05);
 }
 
-.teams .carousel .card p{
+.teams .carousel .card .text{
+    font-size: 25px;
+    font-weight: 500;
+    margin: 10px 0 7px 0;
+}
+
+.teams .carousel .card img{
+    height: 150px;
+    width: 150px;
+    object-fit: cover;
+    border-radius: 50%;
+    border: 5px solid crimson;
+    transition: all 0.3s ease;
+}
+
+.teams .carousel .card:hover img{
+    border-color: #fff;
+}
+
+/* .teams .carousel .card p{
     text-align: left;
     margin-bottom: 10px;
     font-size: 15px;
-}
+} */
 
 
 .app-button{
@@ -608,29 +613,26 @@ footer span a:hover {
 
 /* responsive media query start */
 @media (max-width: 1104px) {
-    .about .about-content .left img {
+    .about .about-content .left img{
         height: 350px;
         width: 350px;
     }
 }
 
 @media (max-width: 991px) {
-    .max-width {
+    .max-width{
         padding: 0 50px;
     }
 }
-
-@media (max-width: 947px) {
-    .menu-btn {
+@media (max-width: 947px){
+    .menu-btn{
         display: block;
         z-index: 999;
     }
-
-    .menu-btn i.active:before {
+    .menu-btn i.active:before{
         content: "\f00d";
     }
-
-    .navbar .menu {
+    .navbar .menu{
         position: fixed;
         height: 100vh;
         width: 100%;
@@ -641,113 +643,92 @@ footer span a:hover {
         padding-top: 80px;
         transition: all 0.3s ease;
     }
-
-    .navbar .menu.active {
+    .navbar .menu.active{
         left: 0;
     }
-
-    .navbar .menu li {
+    .navbar .menu li{
         display: block;
     }
-
-    .navbar .menu li a {
+    .navbar .menu li a{
         display: inline-block;
         margin: 20px 0;
         font-size: 25px;
     }
-
-    .home .home-content .text-2 {
+    .home .home-content .text-2{
         font-size: 70px;
     }
-
-    .home .home-content .text-3 {
+    .home .home-content .text-3{
         font-size: 35px;
     }
-
-    .home .home-content a {
+    .home .home-content a{
         font-size: 23px;
         padding: 10px 30px;
     }
-
-    .max-width {
+    .max-width{
         max-width: 930px;
     }
-
-    .about .about-content .column {
+    .about .about-content .column{
         width: 100%;
     }
-
-    .about .about-content .left {
+    .about .about-content .left{
         display: flex;
         justify-content: center;
         margin: 0 auto 60px;
     }
-
-    .about .about-content .right {
+    .about .about-content .right{
         flex: 100%;
     }
-
-    .services .serv-content .card {
+    .services .serv-content .card{
         width: calc(50% - 10px);
         margin-bottom: 20px;
     }
-
-    .contact .contact-content .column {
+    .skills .skills-content .column,
+    .contact .contact-content .column{
         width: 100%;
         margin-bottom: 35px;
     }
 }
 
 @media (max-width: 690px) {
-    .max-width {
+    .max-width{
         padding: 0 23px;
     }
-
-    .home .home-content .text-2 {
+    .home .home-content .text-2{
         font-size: 60px;
     }
-
-    .home .home-content .text-3 {
+    .home .home-content .text-3{
         font-size: 32px;
     }
-
-    .home .home-content a {
+    .home .home-content a{
         font-size: 20px;
     }
-
-    .services .serv-content .card {
+    .services .serv-content .card{
         width: 100%;
     }
 }
 
 @media (max-width: 500px) {
-    .home .home-content .text-2 {
+    .home .home-content .text-2{
         font-size: 50px;
     }
-
-    .home .home-content .text-3 {
+    .home .home-content .text-3{
         font-size: 27px;
     }
-
     .about .about-content .right .text,
-    .skills .skills-content .left .text {
+    .skills .skills-content .left .text{
         font-size: 19px;
     }
-
-    .contact .right form .fields {
+    .contact .right form .fields{
         flex-direction: column;
     }
-
     .contact .right form .name,
-    .contact .right form .email {
+    .contact .right form .email{
         margin: 0;
     }
-
-    .right form .error-box {
-        width: 150px;
+    .right form .error-box{
+       width: 150px;
     }
-
-    .scroll-up-btn {
+    .scroll-up-btn{
         right: 15px;
         bottom: 15px;
         height: 38px;
